--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-pdf/renderer": "^4.3.2",
+    "@types/pako": "^2.0.4",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -48,12 +50,15 @@
     "embla-carousel-react": "8.5.1",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
+    "html2canvas-pro": "^1.6.7",
     "input-otp": "1.4.1",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.454.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
+    "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
-    "puppeteer": "^24.37.2",
+    "puppeteer": "^24.37.3",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
