--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-pdf/renderer": "^4.3.2",
+    "@sparticuz/chromium": "^143.0.4",
     "@types/pako": "^2.0.4",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
