--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-pdf/renderer": "^4.3.2",
-    "@sparticuz/chromium": "^131.0.1",
-    "@sparticuz/chromium-min": "^126.0.0",
+    "@sparticuz/chromium": "^143.0.4",
     "@types/pako": "^2.0.4",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
@@ -60,8 +59,9 @@
     "next-themes": "^0.4.6",
     "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
-    "puppeteer-core": "^23.11.1",
-    "react": "19.2.0",
+    "puppeteer": "^24.37.3",
+    "puppeteer-core": "^24.37.3",
+    "react": "^19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
@@ -77,10 +77,9 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
-    "@types/react": "^19",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
-    "puppeteer": "^23.11.1",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
