--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "8.5.1",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
+    "googleapis": "^171.4.0",
     "html2canvas-pro": "^1.6.7",
     "input-otp": "1.4.1",
     "jspdf": "^4.1.0",
